-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Android armv7a
-
-
3bd9da9aba63b51114a3602313e51085954be194
When triggering a SoundEffect::play() multiple times in sequence (so no looping) the sound effect stops playback after 5 seconds to 5 minutes without any error messages in the logs. A subsequent call to play() has no effect afterwards. This only happens on Android devices.
The larger the QML project the sooner the SoundEffect stops playing, so this might be related to a memory issue (I also noticed that a subsequent call to play() allocates another 3MB of memory for every call until the garbage collector jumps in, so probably the memory could be managed in a better way?).
Also, playing two or more sound effects randomly in parallel usually triggers the issue more often.
Used wav file type (included in qrc resource file):
sfx_prop.wav: RIFF (little-endian) data, WAVE audio, Microsoft PCM, 16 bit, stereo 44100 Hz
Used Qt version:
Qt 5.3.1
QtQuick 2.2 (also tested with other imports)
QtMultimedia 5.0
Tested Android devices:
- HTC One X
- Google Nexus 7
- Huawei Ascent
Architectures:
- armv7a
Please also see the attached demo project to reproduce the issue (it usually takes a little bit longer until the problem occurs due to the small project size).